objects/SESOC__Document__c.object
<CustomObject>
    <description>E-Signature Documents</description>
    <fields>
        <fullName>SESOC__Document_Collection_Index__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this required lookup field to the Document Collection Index. By default, it is blank.</description>
        <label>Document Collection Index</label>
        <referenceTo>LLC_BI__Document_Collection_Index__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SESOC__Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this required lookup field to the package.</description>
        <label>Package</label>
        <referenceTo>SESOC__Package__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SESOC__Status__c</fullName>
        <description>The system automatically populates this required picklist to track the status of the document. By default, it is blank.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>Pending Download</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SESOC__VendorId__c</fullName>
        <description>The system automatically populates this text field to track the vendor ID of the document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Document</label>
    <nameField>
        <displayFormat>D-{000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>